2020-07-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-newtx.tex,
	* Makefile: generate files for Newtx fonts
	https://puszcza.gnu.org.ua/bugs/index.php?236#postcomment

2020-07-18  Karl Berry  <karl@freefriends.org>

	* Makefile (update):  missing ) on "$(dest_src/", causing 
	"unterminated variable reference".
	(destdir): change to update.dir from .., to make it clearer
	this is a test target not in regular use.

2020-07-17 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): \rowcolor should have precedence over
	\columncolor in colortbl support.
	https://puszcza.gnu.org.ua/bugs/?163
	* tex4ht-html4.tex (html4.4ht): fixed Koma Script \paragraph.
	https://puszcza.gnu.org.ua/bugs/?176
	* tex4ht-html4.tex (html4.4ht): allow linebreak in long URLs.
	https://puszcza.gnu.org.ua/bugs/index.php?301

2020-07-16 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): fixed eso-pic support.
	https://puszcza.gnu.org.ua/bugs/?231
	* tex4ht-4ht.tex (article.4ht,book.4ht,report.4ht,
	scrbook.4ht,scrreprt.4ht): fixed tocdepth handling.
	https://puszcza.gnu.org.ua/bugs/?228

2020-07-13 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht, ctex.4ht): added support for the
	ctex package.
	https://github.com/michal-h21/make4ht/issues/29

2020-07-10 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-tei.tex (tei.4ht): declare encoding in <?xml ...>
	* tex4ht-fonts-modern.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/rm-lm.htf
	): added declaration for rm-lmcsc.
	* tex4ht-fonts-noncjk.tex (
	DejaVuSansCondensed-Bold-tlf-t1.htf
	DejaVuSansCondensed-BoldOblique-tlf-t1.htf
	DejaVuSansCondensed-Oblique-tlf-t1.htf
	DejaVuSansCondensed-tlf-t1.htf
	): these fonts are not small caps (thanks to Linas Stonys).


2020-07-09 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-tei.tex (tei.4ht): defined \ifHCond conditional.
	* tex4ht-tei.tex (tei.4ht): defined basic HTF font support.
